Change header, footer and post content regions to use CSS grid layout + Resolve fouc (Search form in header) by making the toggle a link in disguise + Tidy spacing related to removal of @include make-md-column mixins

--- a/themes/sector_starter/scss/component/_control.scss
+++ b/themes/sector_starter/scss/component/_control.scss
@@ -4,21 +4,10 @@
  */
 
 .control--responsive-menu {
-  width: 30%;
   margin-top: -2px;
-  @include respond-to(tablet-and-up) {
-    width: 40%;
-  }
-  @include respond-to(desktop-and-up) {
-    display: none;
-  }
 }
 
 .control--fly-out-search {
-  width: 10%;
-  @include respond-to(tablet-large-and-down) {
-    display: none;
-  }
   .toggle--search {
     &.active {
       .icon--search {
