--- a/themes/sector_starter/scss/layout/_header.scss
+++ b/themes/sector_starter/scss/layout/_header.scss
@@ -24,10 +24,46 @@
     }
   }
   .region-header {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
     align-items: center;
+    @include respond-to(desktop-and-up) {
+      grid-template-rows: 100%;
+      grid-template-columns: auto 1fr auto;
+    }
+    .promotion--brand {
+      grid-row: 1 / 2;
+      @include respond-to(desktop-and-up) {
+        grid-column: 1 / 2;
+      }
+    }
+    .promotion--navigation-primary {
+      grid-row: 2 / 3;
+      grid-column: 1 / 3;
+      @include respond-to(desktop-and-up) {
+        grid-row: 1 / 2;
+        grid-column: 2 / 3;
+      }
+    }
+    .control--fly-out-search {
+      grid-row: 1 / 2;
+      @include respond-to(desktop-and-up) {
+        grid-column: 3 / 3;
+      }
+      @include respond-to(tablet-large-and-down) {
+        display: none;
+      }
+    }
+    .control--responsive-menu {
+      grid-row: 1 / 2;
+      @include respond-to(desktop-and-up) {
+        display: none;
+      }
+    }
+    .search--flyout {
+      grid-row: 2 / 3;
+      grid-column: 1 / 3;
+    }
   }
 }
