--- a/themes/sector_starter/scss/layout/_post-content.scss
+++ b/themes/sector_starter/scss/layout/_post-content.scss
@@ -5,12 +5,26 @@
 .post-content {
   .region-post-content {
     .path-frontpage & {
-      display: flex;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      height: 100%;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+      align-items: center;
       @include respond-to(desktop-and-up) {
-        justify-content: space-between;
+        grid-template-rows: 100%;
+        grid-template-columns: 1fr 1fr;
+      }
+      .promotion--news {
+        grid-row: 1 / 2;
+        @include respond-to(desktop-and-up) {
+          grid-column: 1 / 2;
+        }
+      }
+      .promotion--resources {
+        grid-row: 2 / 3;
+        @include respond-to(desktop-and-up) {
+          grid-row: 1 / 2;
+          grid-column: 2 / 2;
+        }
       }
     }
   }
