--- a/themes/sector_starter/scss/layout/_pre-footer.scss
+++ b/themes/sector_starter/scss/layout/_pre-footer.scss
@@ -9,7 +9,8 @@
     padding-bottom: $spacing-double;
   }
   .region-pre-footer {
-    margin-left: $responsive-layout-gutter;
-    margin-right: $responsive-layout-gutter;
+    width: 100%;
+    padding-left: $responsive-layout-gutter;
+    padding-right: $responsive-layout-gutter;
   }
 }
